--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@htmlacademy/editorconfig-cli": "^1.0.0",
     "autoprefixer": "9.5.x",
     "browser-sync": "2.26.x",
+    "del": "^5.0.0",
+    "eslint": "^6.0.1",
     "gulp": "4.0.x",
     "gulp-less": "4.0.x",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
+    "gulp-posthtml": "^3.0.4",
     "gulp-sourcemaps": "2.6.x",
+    "gulp-svg-sprite": "^1.5.0",
     "stylelint": "^10.1.0",
     "stylelint-config-htmlacademy": "0.1.x"
   },
