--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-posthtml": "^3.0.4",
     "gulp-sourcemaps": "2.6.x",
     "gulp-svg-sprite": "^1.5.0",
+    "nouislider": "^14.0.2",
     "stylelint": "^10.1.0",
     "stylelint-config-htmlacademy": "0.1.x"
   },
@@ -43,6 +44,8 @@
     "node": "8.16"
   },
   "dependencies": {
-    "editorconfig-cli": "^0.3.0"
+    "cors": "^2.8.5",
+    "editorconfig-cli": "^0.3.0",
+    "svgxuse": "^1.2.6"
   }
 }
