--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-sourcemaps": "2.6.x",
     "gulp-svg-sprite": "^1.5.0",
+    "gulp-svgstore": "^7.0.1",
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
     "nouislider": "^14.0.2",
